--- a/Legsemporium/cart.html
+++ b/Legsemporium/cart.html
@@ -1137,7 +1137,29 @@
                     <div class="clearfix"></div>
                     <form action="">
                         <div class="header">cart totals</div>
-                        <input type="text" value="$ 60.00" readonly>
+                        <div class="row_wrapper">
+                            <div class="row clearfix">
+                                <div class="sub_header">Subtotal</div>
+                                <!--<input type="text" value="$ 60.00" readonly>-->
+                                <div class="cart_price">
+                                    $ <span>60.00</span>
+                                </div>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="sub_header">Discount</div>
+                                <div class="cart_price">
+                                    $ <span>60.00</span>
+                                </div>
+                                <!--<input type="text" value="$ 60.00" readonly>-->
+                            </div>
+                            <div class="row clearfix">
+                                <div class="sub_header">TOTAL</div>
+                                <div class="cart_price">
+                                    $ <span>60.00</span>
+                                </div>
+                                <!--<input type="text" value="$ 60.00" readonly>-->
+                            </div>
+                        </div>
                         <!--<input type="submit" class="button" value="proceed to checkout">-->
                         <a href="checkout.html"><div class="button">proceed to checkout</div></a>
                     </form>
