--- a/Legsemporium/checkout.html
+++ b/Legsemporium/checkout.html
@@ -1163,42 +1163,44 @@
                         your order
                     </div>
                     <div class="checkout_table clearfix">
-                        <table>
-                            <tbody>
-                            <tr>
-                                <td class="close">
-                                    <div class="close_animation_card animation_card_cart">
-                                        <div class="first_line search_hover_first"></div>
-                                        <div class="second_line search_hover_second"></div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <img src="images/dancers.png" alt="">
-                                </td>
-                                <td class="name">Alena C - Sculpted Legs Floor Play</td>
-                                <td class="price"> $ 30.00</td>
-                            </tr>
-                            <tr>
-                                <td class="close">
-                                    <div class="close_animation_card animation_card_cart">
-                                        <div class="first_line search_hover_first"></div>
-                                        <div class="second_line search_hover_second"></div>
-                                    </div>
-                                </td>
-                                <td>
-                                    <img src="images/dancers.png" alt="">
-                                </td>
-                                <td class="name">Alena C - Sculpted Legs Floor Play</td>
-                                <td class="price"> $ 30.00</td>
-                            </tr>
-                            <tr>
-                                <td>TOTAL</td>
-                                <td></td>
-                                <td></td>
-                                <td>$ 60.00</td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <div class="table_wrapper">
+                            <table>
+                                <tbody>
+                                <tr>
+                                    <td class="close">
+                                        <div class="close_animation_card animation_card_cart">
+                                            <div class="first_line search_hover_first"></div>
+                                            <div class="second_line search_hover_second"></div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <img src="images/dancers.png" alt="">
+                                    </td>
+                                    <td class="name">Alena C - Sculpted Legs Floor Play</td>
+                                    <td class="price"> $ 30.00</td>
+                                </tr>
+                                <tr>
+                                    <td class="close">
+                                        <div class="close_animation_card animation_card_cart">
+                                            <div class="first_line search_hover_first"></div>
+                                            <div class="second_line search_hover_second"></div>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <img src="images/dancers.png" alt="">
+                                    </td>
+                                    <td class="name">Alena C - Sculpted Legs Floor Play</td>
+                                    <td class="price"> $ 30.00</td>
+                                </tr>
+                                <tr>
+                                    <td>TOTAL</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>$ 60.00</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                         <a href="cart.html"><div class="button_a">back to cart</div></a>
                     </div>
                     <div class="bottom_form clearfix;">
