--- a/Legsemporium/discount.html
+++ b/Legsemporium/discount.html
@@ -1085,17 +1085,17 @@
                         <li><a href="">Price: high to low</a></li>
                     </ul>
                 </div>
-                <div class="filter_block_col">
-                    <div class="header">price filter</div>
-                    <a href=""><div class="subheader">All</div></a>
-                    <ul>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                    </ul>
-                </div>
+                <!--<div class="filter_block_col">-->
+                    <!--<div class="header">price filter</div>-->
+                    <!--<a href=""><div class="subheader">All</div></a>-->
+                    <!--<ul>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
                 <!--<div class="filter_block_col">-->
         
                 <!--</div>-->
@@ -1107,6 +1107,17 @@
     </div>
 
     <div class="discount_list_content clearfix">
+        <div class="header">
+            <h2>
+                PHOTO
+            </h2>
+            <div class="relative">
+                <span class="title-separator"><span></span></span>
+            </div>
+            <div class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </div>
+        </div>
         <div class="new_container clearfix">
             <div class="models">
                 <div class="sale_discount">
@@ -1216,14 +1227,27 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="header">
+            <h2>
+                VIDEO
+            </h2>
+            <div class="relative">
+                <span class="title-separator"><span></span></span>
+            </div>
+            <div class="text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </div>
+        </div>
+        <div class="new_container video_discount clearfix">
             <div class="models">
                 <div class="sale_discount">
                     sale
                 </div>
                 <a href="model_photo_product.html">
                     <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
                     </div>
                     <div class="description">Alena C - Sculpted Legs Floor Play</div>
                 </a>
@@ -1249,8 +1273,8 @@
                 </div>
                 <a href="model_photo_product.html">
                     <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
                     </div>
                     <div class="description">Alena C - Sculpted Legs Floor Play</div>
                 </a>
@@ -1276,8 +1300,8 @@
                 </div>
                 <a href="model_photo_product.html">
                     <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
                     </div>
                     <div class="description">Alena C - Sculpted Legs Floor Play</div>
                 </a>
@@ -1303,8 +1327,8 @@
                 </div>
                 <a href="model_photo_product.html">
                     <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
                     </div>
                     <div class="description">Alena C - Sculpted Legs Floor Play</div>
                 </a>
@@ -1330,8 +1354,8 @@
                 </div>
                 <a href="model_photo_product.html">
                     <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
                     </div>
                     <div class="description">Alena C - Sculpted Legs Floor Play</div>
                 </a>
@@ -1357,278 +1381,8 @@
                 </div>
                 <a href="model_photo_product.html">
                     <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
-                    </div>
-                    <div class="description">Alena C - Sculpted Legs Floor Play</div>
-                </a>
-                <div class="price">$ 30.00 <span>$ 60.00</span></div>
-                <div class="hidden_price">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    <div class="buy_enjoy">add to cart</div>
-                </div>
-                <div class="hidden_hover">
-                    <div class="heart_block">
-                        <div class="text">Add To Wishlist</div>
-                        <i class="fa fa-heart" aria-hidden="true"></i>
-                    </div>
-                    <div class="zoom_block">
-                        <div class="text">Quick View</div>
-                        <i class="fa fa-search-plus" aria-hidden="true"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="models">
-                <div class="sale_discount">
-                    sale
-                </div>
-                <a href="model_photo_product.html">
-                    <div class="img_models_container">
-                        <img src="images/dancers.png" alt="" />
-                        <img src="images/ifbbs.png" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
+                        <img src="images/model_video_item.jpg" alt="" />
                     </div>
                     <div class="description">Alena C - Sculpted Legs Floor Play</div>
                 </a>
