--- a/Legsemporium/model_photo.html
+++ b/Legsemporium/model_photo.html
@@ -1098,17 +1098,17 @@
                         <li><a href="">Price: high to low</a></li>
                     </ul>
                 </div>
-                <div class="filter_block_col">
-                    <div class="header">price filter</div>
-                    <a href=""><div class="subheader">All</div></a>
-                    <ul>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                        <li><a href="">$30.00 - $60.00</a></li>
-                    </ul>
-                </div>
+                <!--<div class="filter_block_col">-->
+                    <!--<div class="header">price filter</div>-->
+                    <!--<a href=""><div class="subheader">All</div></a>-->
+                    <!--<ul>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                        <!--<li><a href="">$30.00 - $60.00</a></li>-->
+                    <!--</ul>-->
+                <!--</div>-->
                 <!--<div class="filter_block_col">-->
         
                 <!--</div>-->
