--- a/Legsemporium/model_photo.html
+++ b/Legsemporium/model_photo.html
@@ -1638,9 +1638,13 @@
                 </div>
             </a>
             <div class="social">
+                <a href="mailto:name@email.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                 <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 <a href="https://plus.google.com" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                <a href="https://www.pinterest.com/" target="_blank"><i class="fa fa-pinterest" aria-hidden="true"></i></a>
             </div>
             <div class="footer_menu">
                 <a href="index.html">
