--- a/Domolend/index.html
+++ b/Domolend/index.html
@@ -90,10 +90,12 @@
               <i class="fa fa-heart-o" aria-hidden="true" onClick="window.location='wishList.html'"></i>
               <i class="fa fa-eye" aria-hidden="true" onClick="window.location='compare.html'"></i>
             </div>
-            <div class="bucket" onClick="window.location='bucket.html'">
-              <a>1</a>
-              <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>КОРЗИНА</span>
+            <div class="buckets">
+              <div class="bucket" onClick="window.location='bucket.html'">
+                <a>1</a>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>КОРЗИНА</span>
 
+              </div>
               <div class="orders" id="orders">
                 <span>ВАШ ЗАКАЗ</span>
 
@@ -174,6 +176,7 @@
                 </div>
               </div>
             </div>
+
           </div>
         </div>
         <div class="clearAll"></div>
@@ -277,16 +280,49 @@
 <div class="banner">
   <div class="sliders">
     <div class="slide active-slide">
-      <img src="img/slider.png" alt="Слайдер"
-           title="Покупать или нет? вот в чем вопрос, тебе подскажет зеленая кнопка"/>
+      <div>
+        <div>
+          <h2>Призыв к действию</h2>
+
+          <p>Вспомогательный текст</p>
+          <span>-20%</span>
+        </div>
+        <div class="slideImg clearfix">
+          <img src="img/slideImg.png" alt="Товар">
+          <img src="img/slideImg.png" alt="Товар">
+        </div>
+        <a class="butt3">КУПИТЬ</a>
+      </div>
     </div>
-    <div class="slide">
-      <img src="img/slider.png" alt="Слайдер"
-           title="Покупать или нет? вот в чем вопрос, тебе подскажет зеленая кнопка"/>
+    <div class="slide ">
+      <div>
+        <div>
+          <h2>Призыв к действию</h2>
+
+          <p>Вспомогательный текст</p>
+          <span>-20%</span>
+        </div>
+        <div class="slideImg clearfix">
+          <img src="img/slideImg.png" alt="Товар">
+          <img src="img/slideImg.png" alt="Товар">
+        </div>
+        <a class="butt3">КУПИТЬ</a>
+      </div>
     </div>
-    <div class="slide">
-      <img src="img/slider.png" alt="Слайдер"
-           title="Покупать или нет? вот в чем вопрос, тебе подскажет зеленая кнопка"/>
+    <div class="slide ">
+      <div>
+        <div>
+          <h2>Призыв к действию</h2>
+
+          <p>Вспомогательный текст</p>
+          <span>-20%</span>
+        </div>
+        <div class="slideImg clearfix">
+          <img src="img/slideImg.png" alt="Товар">
+          <img src="img/slideImg.png" alt="Товар">
+        </div>
+        <a class="butt3">КУПИТЬ</a>
+      </div>
     </div>
   </div>
   <div class="navigation">
@@ -331,7 +367,7 @@
 
             <div class="price">100 <span>грн.</span></div>
             <div class="btns">
-              <a class="buy"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Купить</a>
+              <a class="buy" href="catalogue.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Купить</a>
               <ul>
                 <li><i class="fa fa-heart-o" aria-hidden="true"></i></li>
                 <li><i class="fa fa-eye" aria-hidden="true"></i></li>
