--- a/Domolend/currentProduct.html
+++ b/Domolend/currentProduct.html
@@ -89,10 +89,12 @@
               <i class="fa fa-heart-o" aria-hidden="true" onClick="window.location='wishList.html'"></i>
               <i class="fa fa-eye" aria-hidden="true" onClick="window.location='compare.html'"></i>
             </div>
-            <div class="bucket" onClick="window.location='bucket.html'">
-              <a>1</a>
-              <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>КОРЗИНА</span>
+            <div class="buckets">
+              <div class="bucket" onClick="window.location='bucket.html'">
+                <a>1</a>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>КОРЗИНА</span>
 
+              </div>
               <div class="orders" id="orders">
                 <span>ВАШ ЗАКАЗ</span>
 
