--- a/Domolend/search_result.html
+++ b/Domolend/search_result.html
@@ -61,9 +61,91 @@
             <i class="fa fa-heart-o" aria-hidden="true"></i>
             <i class="fa fa-eye" aria-hidden="true"></i>
           </div>
-          <div class="bucket">
-            <a>1</a>
-            <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>КОРЗИНА</span>
+          <div class="buckets">
+            <div class="bucket" onClick="window.location='bucket.html'">
+              <a>1</a>
+              <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>КОРЗИНА</span>
+
+            </div>
+            <div class="orders" id="orders">
+              <span>ВАШ ЗАКАЗ</span>
+
+              <div class="goodsTov">
+                <div class="tovLeftPart">
+                  <div class="removeTov">
+                    <i class="fa fa-times remove" aria-hidden="true"></i>
+                  </div>
+                  <img src="img/chair.jpg" alt="стул">
+
+                  <div class="aboutTov">
+                    <div class="aboutTovText">
+                      <span>ЗАГОЛОВОК/МАРКИРОВКА</span>
+                      Краткое описание
+                    </div>
+                    <div class="pri">
+                      <div class="numeric">
+                        <span>2</span>шт
+                      </div>
+                      <div class="tovPrice">
+                        400 <span>грн.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="goodsTov">
+                <div class="tovLeftPart">
+                  <div class="removeTov">
+                    <i class="fa fa-times remove" aria-hidden="true"></i>
+                  </div>
+                  <img src="img/chair.jpg" alt="стул">
+
+                  <div class="aboutTov">
+                    <div class="aboutTovText">
+                      <span>ЗАГОЛОВОК/МАРКИРОВКА</span>
+                      Краткое описание
+                    </div>
+                    <div class="pri">
+                      <div class="numeric">
+                        <span>2</span>шт
+                      </div>
+                      <div class="tovPrice">
+                        400 <span>грн.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="goodsTov">
+                <div class="tovLeftPart">
+                  <div class="removeTov">
+                    <i class="fa fa-times remove" aria-hidden="true"></i>
+                  </div>
+                  <img src="img/chair.jpg" alt="стул">
+
+                  <div class="aboutTov">
+                    <div class="aboutTovText">
+                      <span>ЗАГОЛОВОК/МАРКИРОВКА</span>
+                      Краткое описание
+                    </div>
+                    <div class="pri">
+                      <div class="numeric">
+                        <span>2</span>шт
+                      </div>
+                      <div class="tovPrice">
+                        400 <span>грн.</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="ordersFooter">
+                <div class="total">ОБЩАЯ СУММА<span>1200</span> грн.</div>
+                <a href="bucket.html">
+                  РЕДАКТИРОВАТЬ ЗАКАЗ
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
